public/assets/additional_styles.css
/* Additional styles */

/* Base typography */

body {
  font-family: "Montserrat";
}

h1, h2, h3, h4 {
  font-weight: 700;
}

/* Grid */

.main-content {
  width: 100%;
}

td {
  vertical-align: top;
  padding-left: 10px;
  padding-right: 10px;
}

td {
  border: thin red solid;
}

/* Utility */

.round-image {
  border-radius: 50%;
}

.centered {
  text-align: center;
}

.tagline {
  font-size: 22px;
}

/* Buttons */

.primary-button {
  background-color: rgb(0,126,229);
  width: 200px;
  color: white;
  border-radius: 5px;
  height: 40px;
  transition: all 0.2s ease-in-out;
}

.primary-button:hover {
  background-color: rgb(0, 65, 117);
}

/* Navbar */

.navbar {
  background-color: rgb(246,52,64);
  vertical-align: middle;
}

.navbar a {
  color: white !important;
  text-decoration: none;
}

.navbar-brand {
  font-family: "Passion One";
  font-size: xx-large;
}

/* Backgrounds for each section of the page */

.who-delivers {
  background: url("images/main-hero.jpg") no-repeat center center;
  background-size: cover;
  color: white;
  height: 500px;
  padding-top: 150px;
}

.sound-bites-heading, .sound-bites-content, .why-order-heading, .why-order-content {
  background-color: rgb(238, 238, 238);
}

.download-apps {
  background: url("images/download-hero.jpg") no-repeat center center;
  background-size: cover;
  color: white;
  height: 500px;
  padding-top: 150px;
}

.footer {
  background-color: rgb(50, 50, 170);
}

/* Miscellaneous */

.spotlight-image {
  width: 200px;
}

.user-image {
  width: 50px;
}

.store-badge {
  width: 200px;
}

/* Footer styles */

.h4-footer  {
  color: white;
  font-size: 16px;
  font-weight: 700;
  margin-bottom: 10px;
}

.li-footer {
  color: white;
  margin-bottom: 10px;
}

/* My standard vertical spacing classes */

.padding-inside-top-xs {
  padding-top: 10px;
}

.padding-inside-top-sm {
  padding-top: 20px;
}

.padding-inside-top-md {
  padding-top: 50px;
}

.padding-inside-top-lg {
  padding-top: 150px;
}

.padding-inside-top-xl {
  padding-top: 200px;
}

.padding-inside-bottom-xs {
  padding-bottom: 10px;
}

.padding-inside-bottom-sm {
  padding-bottom: 20px;
}

.padding-inside-bottom-md {
  padding-bottom: 50px;
}

.padding-inside-bottom-lg {
  padding-bottom: 150px;
}

.padding-inside-bottom-xl {
  padding-bottom: 200px;
}

.margin-above-top-xs {
  margin-top: 10px;
}

.margin-above-top-sm {
  margin-top: 20px;
}

.margin-above-top-md {
  margin-top: 50px;
}

.margin-above-top-lg {
  margin-top: 150px;
}

.margin-below-bottom-xs {
  margin-bottom: 10px;
}

.margin-below-bottom-sm {
  margin-bottom: 20px;
}

.margin-below-bottom-md {
  margin-bottom: 50px;
}

.margin-below-bottom-lg {
  margin-bottom: 150px;
}

.margin-below-bottom-xl {
  margin-bottom: 200px;
}

